fixed white space margin issue:

--- a/cryptocoins/src/styles.scss
+++ b/cryptocoins/src/styles.scss
@@ -12,9 +12,7 @@ h3 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
 }
-body {
-  margin: 2em;
-}
+
 body,
 input[type="text"],
 button {
